--- a/index.html
+++ b/index.html
@@ -1,5 +1,56 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f8ff;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      color: #2c3e50;
+      font-size: 3em;
+      margin-top: 50px;
+    }
+
+    h2 {
+      color: #e74c3c;
+      font-size: 2em;
+      margin-top: 20px;
+    }
+
+    p {
+      font-size: 1.2em;
+      color: #34495e;
+      margin-top: 20px;
+    }
+    
+    /* Add a little animation for fun */
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
+    .fadeIn {
+      animation: fadeIn 1.5s ease-in-out;
+    }
+  </style>
+</head>
 <body>
-  <h1> HIII!!!!</h1>
+  <div class="fadeIn">
+    <h1>HIII!!!!</h1>
+    <h2>TEJALBEN KALE JAWANA???</h2>
+    <p>SUII JAOOO</p>
+  </div>
 </body>
 </html>
